--- a/EditorBundle/templates/editor/widget.html.twig
+++ b/EditorBundle/templates/editor/widget.html.twig
@@ -2,7 +2,7 @@
     const editorUploadPath = "{{ path('nines_editor_image_upload') }}";
 </script>
 
-<script src="{{ asset('yarn/tinymce/tinymce.min.js') }}"></script>
+<script src="{{ asset('node_modules/tinymce/tinymce.min.js') }}"></script>
 
 {% if nines_editor_config is defined %}
     <script src="{{ asset(nines_editor_config) }}"></script>
