--- a/MediaBundle/templates/pdf/show.html.twig
+++ b/MediaBundle/templates/pdf/show.html.twig
@@ -8,14 +8,11 @@
 
 {% block body %}
 
-    <div class='well' id='pdfview' style='height: 40em'></div>
+    <div class='well' style='height: 40em'>
+        <iframe src="{{ path('nines_media_pdf_view', {'id': pdf.id}) }}" style="overflow: auto; width: 100%; height: 100%;"></iframe>
+    </div>
 
     {% embed '@NinesMedia/pdf/partial/detail.html.twig' %}
     {% endembed %}
 
-{% endblock %}
-
-{% block javascripts %}
-    <script src='{{ asset('node_modules/pdfobject/pdfobject.min.js') }}'></script>
-    <script>PDFObject.embed("{{ path('nines_media_pdf_view', {'id': pdf.id}) }}", "#pdfview")</script>
 {% endblock %}
