Fix form required css
also add for legend tag (not just label)

--- a/UtilBundle/public/css/nines.css
+++ b/UtilBundle/public/css/nines.css
@@ -51,7 +51,7 @@ body > .container {
 }
 
 /* Custom app styles */
-label.required::after {
+label.required::after, legend.required::after {
     content: ' *';
     color: red;
     font-weight: bold;
