Fix media caption text-truncate

--- a/MediaBundle/templates/audio/partial/list-item.html.twig
+++ b/MediaBundle/templates/audio/partial/list-item.html.twig
@@ -40,5 +40,5 @@
             </ul>
         {% endif %}
     </div>
-    <figcaption class="figure-caption">{{ audio.originalName }}</figcaption>
+    <figcaption class="figure-caption text-truncate">{{ audio.originalName }}</figcaption>
 </figure>
