--- a/MediaBundle/templates/image/partial/list-item.html.twig
+++ b/MediaBundle/templates/image/partial/list-item.html.twig
@@ -38,5 +38,5 @@
         </div>
     {% endif %}
     <img src="{{ path('nines_media_image_thumb', {'id': image.id}) }}" class="figure-img img-fluid" />
-    <figcaption class="figure-caption">{{ image.originalName }}</figcaption>
+    <figcaption class="figure-caption text-truncate">{{ image.originalName }}</figcaption>
 </figure>
