--- a/MediaBundle/templates/pdf/partial/list-item.html.twig
+++ b/MediaBundle/templates/pdf/partial/list-item.html.twig
@@ -38,5 +38,5 @@
         </div>
     {% endif %}
     <img src="{{ path('nines_media_pdf_thumb', {'id': pdf.id}) }}" class="figure-img img-fluid rounded">
-    <figcaption class="figure-caption">{{ pdf.originalName }}</figcaption>
+    <figcaption class="figure-caption text-truncate">{{ pdf.originalName }}</figcaption>
 </figure>
