--- a/MediaBundle/templates/pdf/show.html.twig
+++ b/MediaBundle/templates/pdf/show.html.twig
@@ -21,7 +21,7 @@
 {% block body %}
     <figure class="text-center w-100">
         <img src="{{ path('nines_media_pdf_thumb', {'id': pdf.id}) }}" class="figure-img img-fluid rounded">
-        <figcaption class="figure-caption">{{ pdf.originalName }}</figcaption>
+        <figcaption class="figure-caption text-truncate">{{ pdf.originalName }}</figcaption>
     </figure>
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 my-3 g-4">
