--- a/BlogBundle/templates/post_status/index.html.twig
+++ b/BlogBundle/templates/post_status/index.html.twig
@@ -2,9 +2,6 @@
 
 {% block pageheader %}
     <h1>Post Status List</h1>
-    <p class="count">
-        Displaying {{ post_statuses|length }} post_statuses of {{ post_statuses.getTotalItemCount }} total.
-    </p>
 {% endblock %}
 
 {% block body %}
@@ -21,7 +18,8 @@
 
     {% embed '@NinesUtil/term/partial/index.html.twig' with {
         'terms': post_statuses,
-        'path': 'nines_blog_post_status_show'
+        'path': 'nines_blog_post_status_show',
+        'caption': post_statuses.getTotalItemCount ~ ' total',
     } %}
     {% endembed %}
 
