--- a/DublinCoreBundle/templates/element/index.html.twig
+++ b/DublinCoreBundle/templates/element/index.html.twig
@@ -4,9 +4,6 @@
 
 {% block pageheader %}
     <h1>Element List</h1>
-    <p class="count">
-        Displaying {{ elements|length }} elements of {{ elements.getTotalItemCount }} total.
-    </p>
 {% endblock %}
 
 {% block body %}
@@ -25,7 +22,8 @@
 
     {% embed '@NinesUtil/term/partial/index.html.twig' with {
         'terms': elements,
-        'path': 'nines_dc_element_show'
+        'path': 'nines_dc_element_show',
+        'caption': elements.getTotalItemCount ~ ' total',
     } %}
     {% endembed %}
 
