--- a/UtilBundle/templates/term/partial/index.html.twig
+++ b/UtilBundle/templates/term/partial/index.html.twig
@@ -1,16 +1,18 @@
-<form class="my-3" method="get">
-    <div class="input-group">
-        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="popover" data-bs-title="Full text searching options" data-bs-content="<ul class='list-group list-group-flush'><li class='list-group-item'><code>shakespeare</code> - shakespeare should be present, but might not be</li><li class='list-group-item'><code>shakes*</code> - words starting with shakes should be present</li><li class='list-group-item'><code>+agnes</code> - agnes must be present</li><li class='list-group-item'><code>-fisher</code> - fisher must not be present</li><li class='list-group-item'>Combinations are OK: <code>+agnes -fisher</code> finds Anges who isn't a Fisher</li><li class='list-group-item'>Phrases are OK: <code>&quot;nee agnes&quot;</code> finds rows that contain the literal phrase.</ul>">
-            <i class="bi bi-question-circle"></i>
-        </button>
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search" name="q" id="q" value="{{ q }}" />
-        <button class="btn btn-primary" type="submit" id='btn-search'>
-            <i class="bi bi-search"></i> Search
-        </button>
-    </div>
-</form>
+{% if q is defined %}
+    <form class="my-3" method="get">
+        <div class="input-group">
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="popover" data-bs-title="Full text searching options" data-bs-content="<ul class='list-group list-group-flush'><li class='list-group-item'><code>shakespeare</code> - shakespeare should be present, but might not be</li><li class='list-group-item'><code>shakes*</code> - words starting with shakes should be present</li><li class='list-group-item'><code>+agnes</code> - agnes must be present</li><li class='list-group-item'><code>-fisher</code> - fisher must not be present</li><li class='list-group-item'>Combinations are OK: <code>+agnes -fisher</code> finds Anges who isn't a Fisher</li><li class='list-group-item'>Phrases are OK: <code>&quot;nee agnes&quot;</code> finds rows that contain the literal phrase.</ul>">
+                <i class="bi bi-question-circle"></i>
+            </button>
+            <input type="search" class="form-control" placeholder="Search..." aria-label="Search" name="q" id="q" value="{{ q }}" />
+            <button class="btn btn-primary" type="submit" id='btn-search'>
+                <i class="bi bi-search"></i> Search
+            </button>
+        </div>
+    </form>
+{% endif %}
 <table class="table table-striped table-sm">
-    {% if caption %}
+    {% if caption is defined %}
         <caption>{{ caption }}</caption>
     {% endif %}
     <thead>
