--- a/FeedbackBundle/templates/comment/comment-interface.html.twig
+++ b/FeedbackBundle/templates/comment/comment-interface.html.twig
@@ -1,7 +1,7 @@
 <div class="card card-light">
     <div class="card-header" role="tab" id="widgetHeader">
         <h4 class="card-title">
-            <a class="collapsed" role="button" data-bs-toggle="collapse" href="#commentList" aria-expanded="false" aria-controls="commentList">
+            <a class="collapsed text-decoration-none text-dark" role="button" data-bs-toggle="collapse" href="#commentList" aria-expanded="false" aria-controls="commentList">
                 Comments for <i>{{ entity|u.trim(60, '...') }}</i>
             </a>
         </h4>
