--- a/BlogBundle/templates/post/fulltext.html.twig
+++ b/BlogBundle/templates/post/fulltext.html.twig
@@ -30,22 +30,25 @@
 
     {% if posts|length > 0 %}
         {% for post in posts %}
-            <div class="card card-light">
+            <div class="card card-light mb-3">
                 <div class="card-header">
-                    <h2 class="card-title pull-left">
-                        <a href="{{ path('nines_blog_post_show', {'id': post.id}) }}">
-                            {{ post.title }}
-                        </a>
+                    <h2 class="card-title row">
+                        <div class="col">
+                            <a href="{{ path('nines_blog_post_show', {'id': post.id}) }}">
+                                {{ post.title }}
+                            </a>
+                        </div>
+                        <div class="col-auto">
+                            {% if is_granted('ROLE_BLOG_ADMIN') %}
+                                <div class="card-title ms-auto mb-3">{{ post.status.label }}</div>
+                            {% endif %}
+                        </div>
                     </h2>
-                    {% if is_granted('ROLE_BLOG_ADMIN') %}
-                        <div class="card-title pull-right">{{ post.status.label }}</div>
-                        <div class="clearfix"></div>
-                    {% endif %}
                 </div>
                 <div class="card-body">
-                    <p>{{ post.excerpt|default('')|sanitize_html }}</p>
+                    <p>{{ post.excerpt|default('')|raw }}</p>
                 </div>
-                <div class="card-footer text-right nines-author">
+                <div class="card-footer text-end nines-author">
                     Posted {{ post.created|date }} by {{ post.user.fullname }} in
                     <a href="{{ path('nines_blog_post_category_show', {'id': post.category.id}) }}">
                         {{ post.category -}}
