--- a/FeedbackBundle/templates/comment/comment-interface.html.twig
+++ b/FeedbackBundle/templates/comment/comment-interface.html.twig
@@ -1,4 +1,4 @@
-<div class="card card-light">
+<div class="card card-light mb-3">
     <div class="card-header" role="tab" id="widgetHeader">
         <h4 class="card-title">
             <a class="collapsed text-decoration-none text-dark" role="button" data-bs-toggle="collapse" href="#commentList" aria-expanded="false" aria-controls="commentList">
