--- a/FeedbackBundle/templates/comment/index.html.twig
+++ b/FeedbackBundle/templates/comment/index.html.twig
@@ -20,7 +20,7 @@
 
     <div class='row'>
         <div class='col-sm-2'>
-            <div class='card card-light'>
+            <div class='card card-light mb-3'>
                 <div class="card-header">Filter</div>
                 <div class='card-body'>
                     Filter comments by status
