--- a/BlogBundle/templates/page/sort.html.twig
+++ b/BlogBundle/templates/page/sort.html.twig
@@ -13,24 +13,24 @@
 
         <input type='hidden' name='order' id='order' value='' />
 
-        <div class="btn-toolbar">
-            <div class="btn-group pull-right">
+        <div class="btn-toolbar mb-3">
+            <div class="btn-group ms-auto mb-3">
                 <a href="{{ path('nines_blog_page_index') }}" class="btn btn-primary">
                     <i class="bi bi-arrow-left"></i> Back
                 </a>
             </div>
         </div>
 
-        <ul class='list-group' id='list-order'>
+        <ul class='list-group mb-3' id='list-order'>
             {% for page in pages %}
                 <li class='list-group-item' id='{{ page.id }}'>
                     <b>{{ page.title }}</b><br/>
-                    {{ page.excerpt|default('')|sanitize_html }}
+                    {{ page.excerpt|default('')|raw }}
                 </li>
             {% endfor %}
         </ul>
 
-        <div class='mb-3 row'>
+        <div class='mb-3'>
             <button type='submit' class='btn btn-primary'>Save</button>
         </div>
 
