--- a/BlogBundle/templates/post_category/show.html.twig
+++ b/BlogBundle/templates/post_category/show.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
     <div class="btn-toolbar">
-        <div class="btn-group pull-right">
+        <div class="btn-group ms-auto mb-3">
             <a href="{{ path('nines_blog_post_category_index') }}" class="btn btn-primary">
                 <i class="bi bi-arrow-left"></i> Back
             </a>
@@ -52,22 +52,25 @@
     </table>
 
     {% for post in posts %}
-        <div class="card card-light">
+        <div class="card card-light mb-3">
             <div class="card-header">
-                <h2 class="card-title pull-left">
-                    <a href="{{ path('nines_blog_post_show', {'id': post.id}) }}">
-                        {{ post.title }}
-                    </a>
+                <h2 class="card-title row">
+                    <div class="col">
+                        <a href="{{ path('nines_blog_post_show', {'id': post.id}) }}">
+                            {{ post.title }}
+                        </a>
+                    </div>
+                    <div class="col-auto">
+                        {% if is_granted('ROLE_BLOG_ADMIN') %}
+                            {{ post.status.label }}
+                        {% endif %}
+                    </div>
                 </h2>
-                {% if is_granted('ROLE_BLOG_ADMIN') %}
-                    <div class="card-title pull-right">{{ post.status.label }}</div>
-                {% endif %}
-                <div class="clearfix"></div>
             </div>
             <div class="card-body">
-                {{ post.excerpt|default('')|sanitize_html }}
+                {{ post.excerpt|default('')|raw }}
             </div>
-            <div class="card-footer text-right nines-author">
+            <div class="card-footer text-end nines-author">
                 Posted {{ post.created|date }} by {{ post.user.fullname }} in
                 <a href="{{ path('nines_blog_post_category_show', {'id': post.category.id}) }}">
                     {{ post.category -}}
