--- a/FeedbackBundle/templates/comment/comment-form.html.twig
+++ b/FeedbackBundle/templates/comment/comment-form.html.twig
@@ -1,4 +1,4 @@
-<div class="card card-light">
+<div class="card card-light mb-3">
     <div class="card-body">
         {% set form = comment_service.getForm() %}
         {{ form_start(form, {'action': path('nines_feedback_comment_new')}) }}
