--- a/MediaBundle/templates/audio/show.html.twig
+++ b/MediaBundle/templates/audio/show.html.twig
@@ -49,11 +49,11 @@
         </div>
         <div class="col">
             <h6><i class="bi bi-info-circle"></i> Description</h6>
-            {{ audio.description|default('')|sanitize_html }}
+            {{ audio.description|default('')|raw }}
         </div>
         <div class="col">
             <h6><i class="bi bi-list-task"></i> License</h6>
-            {{ audio.license|default('')|sanitize_html }}
+            {{ audio.license|default('')|raw }}
         </div>
         <div class="col">
             <h6><i class="bi bi-link-45deg"></i> Entity</h6>
