--- a/MediaBundle/templates/pdf/show.html.twig
+++ b/MediaBundle/templates/pdf/show.html.twig
@@ -47,11 +47,11 @@
         </div>
         <div class="col">
             <h6><i class="bi bi-info-circle"></i> Description</h6>
-            {{ pdf.description|default('')|sanitize_html }}
+            {{ pdf.description|default('')|raw }}
         </div>
         <div class="col">
             <h6><i class="bi bi-list-task"></i> License</h6>
-            {{ pdf.license|default('')|sanitize_html }}
+            {{ pdf.license|default('')|raw }}
         </div>
         <div class="col">
             <h6><i class="bi bi-link-45deg"></i> Entity</h6>
