--- a/UtilBundle/templates/term/partial/index.html.twig
+++ b/UtilBundle/templates/term/partial/index.html.twig
@@ -30,7 +30,7 @@
                     </a>
                 </td>
                 <td>
-                    {{ term.description|default('')|sanitize_html }}
+                    {{ term.description|default('')|raw }}
                 </td>
             </tr>
         {% endfor %}
