--- a/BlogBundle/templates/page/index.html.twig
+++ b/BlogBundle/templates/page/index.html.twig
@@ -15,7 +15,7 @@
                     <i class="bi bi-plus-circle"></i> New
                 </a>
                 <a href="{{ path('nines_blog_page_sort') }}" class="btn btn-primary">
-                    <i class="bi bi-sort"></i> Sort
+                    <i class="bi bi-arrow-down-up"></i> Sort
                 </a>
             {% endif %}
             <a href="{{ path('nines_blog_page_search') }}" class="btn btn-primary">
