--- a/UtilBundle/templates/form/bootstrap_5_layout.html.twig
+++ b/UtilBundle/templates/form/bootstrap_5_layout.html.twig
@@ -1,5 +1,25 @@
 {% use "bootstrap_5_layout.html.twig" %}
 
+{%- block datalist_widget -%}
+    {% set datalist_id = 'datalist_' ~ id %}
+    {% set attr = attr|merge({'list': datalist_id}) %}
+    {{- block('form_widget') -}}
+    <datalist id="{{ datalist_id }}">
+        {% for item in datalist %}
+            <option value="{{ item }}">
+        {%- endfor -%}
+    </datalist>
+{%- endblock datalist_widget -%}
+
+{%- block form_end -%}
+    {{ parent() }}
+    <div id="select2entity_modal" class="modal" tabindex="-1">
+        <div class="modal-dialog modal-xl modal-dialog-scrollable">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+{%- endblock form_end -%}
+
 {%- block form_label -%}
     {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' h6')|trim}) %}
     {{ parent() }}
@@ -29,7 +49,13 @@
         {%- if 'form-floating' in row_class -%}
             {{- form_widget(form, widget_attr) -}}
             {% if attr.add_route is defined or attr.add_path is defined %}
-                <a href="{{ attr.add_route ?? path(attr.add_path) }}" class="btn btn-primary" target="_blank"><i class="bi bi-plus-circle"></i> {{ attr.add_label }}</a>
+                {% if attr.add_modal is defined and attr.add_modal %}
+                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}">
+                        <i class="bi bi-plus-circle"></i> {{ attr.add_label }}
+                    </button>
+                {% else %}
+                    <a href="{{ attr.add_route ?? path(attr.add_path) }}" class="btn btn-primary" target="_blank"><i class="bi bi-plus-circle"></i> {{ attr.add_label }}</a>
+                {% endif %}
             {% endif %}
             {{- form_label(form) -}}
         {%- else -%}
@@ -40,7 +66,13 @@
                         {{- form_widget(form, widget_attr) -}}
                     </div>
                     <div class="col-lg-auto">
-                        <a href="{{ attr.add_route ?? path(attr.add_path) }}" class="btn btn-primary" target="_blank"><i class="bi bi-plus-circle"></i> {{ attr.add_label }}</a>
+                        {% if attr.add_modal is defined and attr.add_modal %}
+                            <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}">
+                                <i class="bi bi-plus-circle"></i> {{ attr.add_label }}
+                            </button>
+                        {% else %}
+                            <a href="{{ attr.add_route ?? path(attr.add_path) }}" class="btn btn-primary" target="_blank"><i class="bi bi-plus-circle"></i> {{ attr.add_label }}</a>
+                        {% endif %}
                     </div>
                 </div>
             {% else %}
