--- a/UtilBundle/templates/form/bootstrap_5_horizontal_layout.html.twig
+++ b/UtilBundle/templates/form/bootstrap_5_horizontal_layout.html.twig
@@ -64,7 +64,7 @@
                             {{- form_widget(form, widget_attr) -}}
                             {% if attr.add_route is defined or attr.add_path is defined %}
                                 {% if attr.add_modal is defined and attr.add_modal %}
-                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}">
+                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}" data-modal-result-target="#{{ id }}">
                                         <i class="bi bi-plus-circle"></i> {{ attr.add_label }}
                                     </button>
                                 {% else %}
@@ -79,7 +79,7 @@
                             {{- form_widget(form, widget_attr) -}}
                             {% if attr.add_route is defined or attr.add_path is defined %}
                                 {% if attr.add_modal is defined and attr.add_modal %}
-                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}">
+                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}" data-modal-result-target="#{{ id }}">
                                         <i class="bi bi-plus-circle"></i> {{ attr.add_label }}
                                     </button>
                                 {% else %}
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-lg-auto">
                                 {% if attr.add_modal is defined and attr.add_modal %}
-                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}">
+                                    <button type="button" class="btn btn-primary select2entity-modal-btn" data-bs-toggle="modal" data-bs-target="#select2entity_modal" data-modal-content-route="{{ attr.add_route ?? path(attr.add_path) }}" data-modal-result-target="#{{ id }}">
                                         <i class="bi bi-plus-circle"></i> {{ attr.add_label }}
                                     </button>
                                 {% else %}
