Fix admin comment edit
makes captcha exist only in normal comment form

--- a/FeedbackBundle/templates/comment/partial/detail.html.twig
+++ b/FeedbackBundle/templates/comment/partial/detail.html.twig
@@ -29,7 +29,7 @@
         <tr>
             <th>Content</th>
             <td>
-                {{ comment.content|default('')|sanitize_html }}
+                {{ comment.content }}
             </td>
         </tr>
         <tr>
